code quality improvement setting

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -136,7 +136,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Gender"
+                    android:text="@string/gender"
                     android:textAlignment="textStart"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -149,7 +149,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Camera"
+                    android:text="@string/camera"
                     android:textAlignment="textStart"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -162,7 +162,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="Voice Feedback"
+                    android:text="@string/tts"
                     android:textAlignment="textStart"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -308,7 +308,6 @@
                             android:checked="@{user.sex==SEX.MALE, default=false}"
                             android:ems="5"
                             android:text="@string/male"
-                            android:textColor="@color/black"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="parent"
@@ -322,7 +321,6 @@
                             android:checked="@{user.sex==SEX.FEMALE, default=false}"
                             android:ems="5"
                             android:text="@string/female"
-                            android:textColor="@color/black"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toEndOf="@+id/radiobtn_male_settings"
@@ -354,8 +352,7 @@
                             android:layout_height="wrap_content"
                             android:checked="@{user.frontCamera, default=false}"
                             android:ems="5"
-                            android:text="Front"
-                            android:textColor="@color/black"
+                            android:text="@string/front"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="parent"
@@ -368,8 +365,7 @@
                             android:layout_marginStart="8dp"
                             android:checked="@{!user.frontCamera, default=false}"
                             android:ems="5"
-                            android:text="Back"
-                            android:textColor="@color/black"
+                            android:text="@string/back"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toEndOf="@+id/radiobtn_frontcamera_settings"
@@ -401,8 +397,7 @@
                             android:layout_height="wrap_content"
                             android:checked="@{user.tts, default=false}"
                             android:ems="5"
-                            android:text="On"
-                            android:textColor="@color/black"
+                            android:text="@string/on"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toStartOf="parent"
@@ -415,8 +410,7 @@
                             android:layout_marginStart="8dp"
                             android:checked="@{!user.tts, default=false}"
                             android:ems="5"
-                            android:text="Off"
-                            android:textColor="@color/black"
+                            android:text="@string/off"
                             android:textSize="16sp"
                             android:textStyle="bold"
                             app:layout_constraintStart_toEndOf="@+id/radiobtn_ttsOn_settings"
