--- a/app/src/main/res/layout/activity_mediapipe.xml
+++ b/app/src/main/res/layout/activity_mediapipe.xml
@@ -41,12 +41,13 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mediapipe_stop_card"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="90dp"
         android:layout_marginRight="90dp"
+        android:paddingBottom="10sp"
+        android:paddingTop="10sp"
         android:visibility="gone"
-        app:cardBackgroundColor="#40FFFFFF"
         app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,17 +56,20 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_layout_mediapipe_stop_card"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
 
             <TextView
                 android:id="@+id/mediapipe_paused_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="45sp"
+                android:paddingRight="45sp"
+                android:paddingTop="10sp"
+                android:textSize="25sp"
                 android:text="Training Paused"
                 android:textColor="#FF0000"
-                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -75,7 +79,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Continue"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
                 android:textColor="@color/white"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.131"
                 app:layout_constraintStart_toStartOf="parent"
@@ -85,7 +94,12 @@
                 android:id="@+id/mediapipe_finish_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
                 android:backgroundTint="#FF0000"
+                android:textSize="20sp"
                 android:text="Finish"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -100,17 +114,16 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mediapipe_evaluation_card"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        app:cardBackgroundColor="#40FFFFFF"
+        android:layout_width="wrap_content"
+        android:layout_height="65sp"
         app:cardCornerRadius="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraint_layout_mediapipe_evaluation_card"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/mediapipe_check_x_mark"
@@ -127,7 +140,10 @@
                 android:id="@+id/mediapipe_evaluation_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingRight="10sp"
+                android:paddingLeft="10sp"
                 android:text="all correct"
+                android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/mediapipe_check_x_mark" />
