Feat: Replay View experimental

--- a/app/src/main/res/values/constants.xml
+++ b/app/src/main/res/values/constants.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="test_video">C0DPdy98e4c</string>
+    <string name="youtube_video_placeholder">C0DPdy98e4c</string>
 </resources>
