--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -15,6 +15,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout_profile_settings"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -22,15 +23,15 @@
             android:id="@+id/constraint_layout_header_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
                 android:id="@+id/textview_title_user_profile_settings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:text="@string/profil_settings"
+                android:text="@string/profile_settings"
                 android:textAlignment="textStart"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -57,12 +58,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ScrollView
-            android:id="@+id/scrollview_trainings"
+            android:id="@+id/scrollview_profile_settings"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/constraint_layout_header_settings">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/constraint_layout_content_profile_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
