--- a/app/src/main/res/layout/item_instruction.xml
+++ b/app/src/main/res/layout/item_instruction.xml
@@ -58,7 +58,7 @@
                     tools:ignore="TextContrastCheck" />
 
                 <ImageView
-                    android:id="@+id/image_view_exercise_instruction_item"
+                    android:id="@+id/imageview_exercise_instruction_item"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
@@ -68,7 +68,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textview_exercise_instruction_item"
                     app:layout_optimizationLevel="ratio"
-                    app:srcCompat="@drawable/no_image"
+                    app:srcCompat="@drawable/exercise_placeholder"
                     tools:ignore="ContentDescription,ImageContrastCheck" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
