--- a/app/src/main/res/layout/activity_mediapipe.xml
+++ b/app/src/main/res/layout/activity_mediapipe.xml
@@ -42,8 +42,7 @@
         android:id="@+id/mediapipe_stop_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="90dp"
-        android:layout_marginRight="90dp"
+
         android:paddingTop="10sp"
         android:paddingBottom="10sp"
         android:visibility="gone"
@@ -62,9 +61,9 @@
                 android:id="@+id/mediapipe_paused_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingLeft="45sp"
+                android:paddingLeft="75sp"
                 android:paddingTop="10sp"
-                android:paddingRight="45sp"
+                android:paddingRight="75sp"
                 android:text="Training Paused"
                 android:textColor="#FF0000"
                 android:textSize="25sp"
@@ -84,7 +83,23 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.131"
+                app:layout_constraintHorizontal_bias="0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/mediapipe_paused_text" />
+
+            <Button
+                android:id="@+id/mediapipe_skip_exercise_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10sp"
+                android:layout_marginRight="10sp"
+                android:paddingLeft="10sp"
+                android:paddingRight="10sp"
+                android:text="Skip"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.57"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/mediapipe_paused_text" />
 
@@ -101,7 +116,7 @@
                 android:textColor="@color/white"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.888"
+                app:layout_constraintHorizontal_bias="1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/mediapipe_paused_text" />
 
