--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -49,12 +49,12 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginStart="8dp"
                     android:text="@{wee.exercise.unit == unit.REPETITION? @string/repetitions : @string/duration, default = @string/duration}"
                     android:textAlignment="center"
                     android:textSize="20sp"
                     android:textStyle="bold|italic"
-                    app:layout_constraintBottom_toTopOf="@+id/button_amount_exercise_item"
-                    app:layout_constraintStart_toStartOf="@+id/button_amount_exercise_item"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
@@ -68,12 +68,22 @@
                     android:textAlignment="center"
                     android:textSize="20sp"
                     android:textStyle="bold|italic"
-                    app:layout_constraintBottom_toBottomOf="@+id/textview_unit_header_exercise_item"
                     app:layout_constraintEnd_toStartOf="@+id/imagebutton_info_exercise_item"
                     app:layout_constraintStart_toEndOf="@+id/textview_unit_header_exercise_item"
-                    app:layout_constraintTop_toTopOf="@+id/textview_unit_header_exercise_item" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <Button
+                <LinearLayout
+                    android:id="@+id/linear_layout_buttons_amount_exercise_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/textview_unit_header_exercise_item"
+                    android:orientation="vertical">
+                </LinearLayout>
+
+ <!--               <Button
                     android:id="@+id/button_amount_exercise_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -89,7 +99,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     tools:ignore="DuplicateSpeakableTextCheck" />
-
+-->
                 <TextView
                     android:id="@+id/textview_name_exercise_item"
                     android:layout_width="wrap_content"
@@ -100,10 +110,9 @@
                     android:gravity="center|center_vertical"
                     android:text="@{wee.exercise.name, default=@string/enter_text}"
                     android:textSize="20sp"
-                    app:layout_constraintBottom_toBottomOf="@+id/button_amount_exercise_item"
                     app:layout_constraintEnd_toStartOf="@+id/imagebutton_info_exercise_item"
                     app:layout_constraintStart_toEndOf="@+id/textview_unit_header_exercise_item"
-                    app:layout_constraintTop_toTopOf="@+id/button_amount_exercise_item" />
+                    app:layout_constraintTop_toBottomOf="@+id/textview_title_header_exercise_item" />
 
                 <ImageButton
                     android:id="@+id/imagebutton_info_exercise_item"
@@ -114,10 +123,40 @@
                     android:contentDescription="@string/info"
                     android:minWidth="48dp"
                     android:minHeight="48dp"
-                    app:layout_constraintBottom_toBottomOf="@+id/button_amount_exercise_item"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@+id/textview_title_header_exercise_item"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toTopOf="@+id/imagebutton_add_set_exercise_item"
                     app:srcCompat="@drawable/ic_info_black_24dp"
+                    tools:ignore="ImageContrastCheck" />
+
+                <ImageButton
+                    android:id="@+id/imagebutton_add_set_exercise_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:background="@color/sg_design_light_green"
+                    android:contentDescription="@string/plus"
+                    android:minWidth="48dp"
+                    android:minHeight="48dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imagebutton_info_exercise_item"
+                    app:layout_constraintBottom_toTopOf="@+id/imagebutton_remove_set_exercise_item"
+                    app:srcCompat="@drawable/ic_plus_black_24dp"
+                    tools:ignore="ImageContrastCheck" />
+
+                <ImageButton
+                    android:id="@+id/imagebutton_remove_set_exercise_item"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="8dp"
+                    android:background="@color/sg_design_light_green"
+                    android:contentDescription="@string/minus"
+                    android:minWidth="48dp"
+                    android:minHeight="48dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imagebutton_add_set_exercise_item"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:srcCompat="@drawable/ic_minus_black_24dp"
                     tools:ignore="ImageContrastCheck" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
