--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="sg_design_green_transparent">#E6009D81</color>
     <color name="sg_design_light_green">#8BC34A</color>
     <color name="transparent">#00000000</color>
+    <color name="grey">#FF636262</color>
+    <color name="gold">#FFEAB308</color>
 </resources>
