--- a/app/src/main/res/layout/fragment_training_playback.xml
+++ b/app/src/main/res/layout/fragment_training_playback.xml
@@ -20,6 +20,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/item_viditem" />
+            tools:listitem="@layout/item_videoitem" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
