--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -7,7 +7,7 @@
 
         <import
             alias="util"
-            type="com.sg2022.we_got_the_moves.ui.TimeFormatUtil" />
+            type="com.sg2022.we_got_the_moves.util.TimeFormatter" />
 
         <import
             alias="unit"
